syntax = "proto3";
import public "datetime.proto";

package Serialize;

message RegRequest {
	string login = 1;
	string password = 2;
};

message InRequest {
	string login = 1;
	string password = 2;
};

message JoinRoomRequest {
	int32 client_id = 1;
	string channel_name = 2;
}

message TextRequest {
	string login = 1;
	int32 room_id = 2;
	string channel_name = 3;
	string text = 4;
	Datetime datetime = 5;
}

message HistoryRequest {
	int32 client_id = 1;
  string channel_name = 2;
  Datetime since = 3;
}

message ChannelsRequest {
  int32 client_id = 1;
}

message Request {
	oneof msg {
		RegRequest register_request = 1;
		InRequest input_request = 2;
		JoinRoomRequest join_room_request = 3;
		TextRequest text_request = 4;
    HistoryRequest history_request = 5;
    ChannelsRequest channels_request = 6;
	}
}
